libs/@local/config/tests/snapshots/schema__unconstrained_branch.snap
---
source: libs/@local/config/tests/schema.rs
expression: "exported::<WithUnconstrained>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "WithUnconstrained",
  "type": "object",
  "properties": {
    "extra": {
      "anyOf": [
        {
          "type": "object",
          "properties": {
            "host": {
              "description": "Database hostname.",
              "type": "string"
            },
            "port": {
              "description": "Database port.",
              "type": "integer",
              "format": "uint16",
              "maximum": 65535,
              "minimum": 0
            }
          }
        },
        true
      ]
    }
  },
  "unevaluatedProperties": false
}
