libs/@local/config/tests/snapshots/schema__untagged_enum.snap
---
source: libs/@local/config/tests/schema.rs
expression: "partial_json_schema::<Untagged>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Untagged",
  "anyOf": [
    {
      "type": "object",
      "properties": {
        "host": {
          "description": "Database hostname.",
          "type": "string"
        },
        "port": {
          "description": "Database port.",
          "type": "integer",
          "format": "uint16",
          "maximum": 65535,
          "minimum": 0
        }
      }
    },
    {
      "type": "string"
    }
  ],
  "unevaluatedProperties": false
}
