libs/@local/config/tests/snapshots/schema__untagged_single_field.snap
---
source: libs/@local/config/tests/schema.rs
expression: "partial_json_schema::<UntaggedSingleField>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "UntaggedSingleField",
  "anyOf": [
    {
      "type": "object",
      "properties": {
        "value": {
          "type": "integer",
          "format": "uint16",
          "maximum": 65535,
          "minimum": 0
        }
      },
      "additionalProperties": false
    },
    {
      "type": "string"
    }
  ],
  "unevaluatedProperties": false
}
