libs/@local/config/tests/snapshots/schema__untyped_shapes.snap
---
source: libs/@local/config/tests/schema.rs
expression: "exported::<UntypedShapes>()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "UntypedShapes",
  "type": "object",
  "properties": {
    "ports": {
      "type": "array",
      "contains": {
        "type": "object",
        "properties": {
          "host": {
            "description": "Database hostname.",
            "type": "string"
          },
          "port": {
            "description": "Database port.",
            "type": "integer",
            "format": "uint16",
            "maximum": 65535,
            "minimum": 0
          }
        },
        "unevaluatedProperties": false
      },
      "unevaluatedItems": {
        "type": "object",
        "properties": {
          "host": {
            "description": "Database hostname.",
            "type": "string"
          },
          "port": {
            "description": "Database port.",
            "type": "integer",
            "format": "uint16",
            "maximum": 65535,
            "minimum": 0
          }
        },
        "unevaluatedProperties": false
      }
    },
    "typeless": {
      "properties": {
        "inner": {
          "type": "object",
          "properties": {
            "host": {
              "description": "Database hostname.",
              "type": "string"
            },
            "port": {
              "description": "Database port.",
              "type": "integer",
              "format": "uint16",
              "maximum": 65535,
              "minimum": 0
            }
          },
          "unevaluatedProperties": false
        }
      },
      "unevaluatedProperties": false
    }
  },
  "unevaluatedProperties": false
}
